# SSAO-example

./: GLObjects.hs  Main.hs  ObjParser.hs  README.org  Render.hs  blur_fs.glsl  blur_vs.glsl  default.nix  depth_fs.glsl  depth_vs.glsl  shell.nix  ship_fs.glsl  ship_vs.glsl  ssao-example.cabal  ssao_fs.glsl  ssao_vs.glsl
resources/shaders/: blur_fs.glsl  depth_fs.glsl  depth_vs.glsl  ship_fs.glsl  ship_vs.glsl  ssao_fs.glsl  ssao_vs.glsl
src/: DebugHook.hs  GLObjects.hs  Main.hs  Render.hs
