name:                ssao-example
version:             0.1.0.0
synopsis:            A demonstration of screen-space ambient occlusion using OpenGL & Haskell
homepage:            https://github.com/ocharles/ssao-example
license:             BSD3
license-file:        LICENSE
author:              Ollie Charles
maintainer:          ollie@ocharles.org.uk
category:            Game
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

executable ssao-example
  main-is:             Main.hs
  other-extensions:    RecordWildCards, FlexibleContexts, ForeignFunctionInterface, OverloadedStrings, RecursiveDo, LambdaCase
  build-depends:       base >=4.8 && <4.9, transformers >=0.4 && <0.5, random >=1.1 && <1.2, lens >=4.12 && <4.13, linear >=1.19 && <1.20, sdl2 >=2.1 && <2.2, text >=1.2 && <1.3, attoparsec >=0.13 && <0.14, gl >=0.7 && <0.8, distributive
  default-language:    Haskell2010
  ghc-options: -O2